--- a/packages.config
+++ b/packages.config
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="glew" version="1.9.0.1" targetFramework="native" />
-  <package id="glew.redist" version="1.9.0.1" targetFramework="native" />
-  <package id="glew.v140" version="1.12.0" targetFramework="native" />
-  <package id="glfw" version="3.2.1.5" targetFramework="native" />
-  <package id="glfw.redist" version="3.2.1" targetFramework="native" />
-  <package id="glm" version="0.9.8.5" targetFramework="native" />
+  <package id="nupengl.core" version="0.1.0.1" targetFramework="native" />
+  <package id="nupengl.core.redist" version="0.1.0.1" targetFramework="native" />
   <package id="soil" version="1.16.0" targetFramework="native" />
 </packages>
